# stm32f103_rtic_playground

./: Cargo.toml  README.md  build.rs  memory.x
.cargo/: config.toml
assets/: enclosure.py  sat_icon.raw  title_screen.raw
c/: bindings.h  fix.h  hilbert.c  hilbert.h  lpc.c  lpc.h  lpc_data.c  lpc_data.h
src/: c_bindings.rs  lib.rs  lpc.rs
