[package]
authors = ["Mariusz Ryndzionek <mryndzionek@gmail.com>"]
edition = "2021"
readme = "README.md"
name = "stm32f103_rtic_playground"
version = "0.1.0"

[patch.crates-io]
stm32f1xx-hal = { git = "https://github.com/stm32-rs/stm32f1xx-hal.git", version = "0.8.0", rev = "cd800ce" }

[dependencies]
cortex-m = "0.7"
defmt = "0.3"
defmt-rtt = "0.3"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
stm32f1xx-hal = { version = "0.8.0", features = ["stm32f103", "rt"] }
dwt-systick-monotonic = "1.0.0"
rtic-monotonic = "1.0.0"
embedded-hal = { features = ["unproven"], version = "0.2.6" }

heapless = "0.7"
cortex-m-rtic = "1.1"
nb = "1.0.0"
void = { default-features = false, version = "1.0.2" }

embedded-graphics = "0.7"
profont = "0.5.0"
ssd1306 = "0.7"

smart-leds = "0.3.0"
ws2812-spi = { git = "https://github.com/smart-leds-rs/ws2812-spi-rs.git", branch = "master" }
eeprom = { version = "0.2.0" , features = ["stm32f103"] }
rotary-encoder-hal = "0.5.0"

bbqueue = "0.5.1"
nmea0183 = "0.3.0"
time = { version = "0.3.5", default-features = false, features = ["macros"] }
bresenham = "0.1"
oorandom = "11.1"
rgb = "0.8"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-
