[package]
authors = ["Mariusz Ryndzionek <mryndzionek@gmail.com>"]
edition = "2021"
readme = "README.md"
name = "stm32f103_rtic_playground"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
stm32f1xx-hal = { version = "0.9.0", features = ["stm32f103", "rt"] }
dwt-systick-monotonic = "1.0.0"

heapless = "0.7"
cortex-m-rtic = "1.1"
nb = "1.0"

embedded-graphics = "0.7"
profont = "0.5"
ssd1306 = "0.7"

infrared = "0.14"

smart-leds = "0.3"
eeprom = { version = "0.3" , features = ["stm32f103"] }

bbqueue = "0.5"
nmea0183 = "0.3"
time = { version = "0.3", default-features = false, features = ["macros"] }
oorandom = "11.1"

cty = "0.2"
one-wire-bus = "0.1.1"
ds18b20 = "0.1.1"

[build-dependencies]
cc = "1.0"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 'z' # <-
overflow-checks = false # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-
